# 6bit_Macropad

./: README.md
KiCad_User_Library/: XIAO_RP2040.kicad_sym
RP2040_6bit_Micropad/: CMakeLists.txt  main.c
